# 408-ai-tutor

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  RELEASE_NOTES.md  check_result.py  debug_check.py  docker-compose.yml  fix_pua_db.py  import_pdfs.py  migrate_misconceptions.py  pyproject.toml  start.py  启动.bat
.github/workflows/: release.yml
backend/: Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: agent_exports.py  conversations.py  deps.py  import_routes.py  misconceptions.py  questions.py  quiz.py  tutor.py  weak_knowledge.py  wrong_questions.py
backend/app/core/: exceptions.py  logging_config.py
backend/tests/: conftest.py  test_agent_export_service.py  test_app_startup.py  test_frontend_question_rendering.py  test_markdown_import_assets.py  test_models.py  test_pdf_parser.py  test_question_assets_api_shape.py  test_quiz_service.py
frontend/: Dockerfile  app.py  requirements.txt
frontend/.streamlit/: config.toml
frontend/pages/: 1_题库导入.py  2_刷题练习.py  3_答题统计.py  4_AI助教.py  5_错题集.py
frontend/shared/: api.py  bank_labels.py  question_rendering.py  styles.py
question_banks/: manifest.json
question_banks/操作系统/: bank.db  metadata.json
question_banks/数据结构/: bank.db  metadata.json
question_banks/计算机组成原理/: bank.db  metadata.json
question_banks/计算机网络/: bank.db  metadata.json
scripts/: clean_existing_questions.py  extract_images.py  post_import_process.py  qc_question_bank.py  repair_garbled_text.py  repair_legacy_markdown_images.py  repair_pua.py  run_mineru_questions_gpu.ps1
(+47 files in other folders)
