[project]
name = "408-ai-tutor"
version = "0.1.0"
description = "408考研AI专属助教 — 智能刷题、错题分析与AI答疑"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[project.urls]
Repository = "https://github.com/qmgk-source/408-ai-tutor"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
