[project]
name = "408-ai-tutor"
version = "0.2.3"
description = "408考研AI专属助教 — 智能刷题、错题分析与AI答疑"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

[project.urls]
Repository = "https://github.com/6wa1t/408-ai-tutor"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
